two classes cleaned up for vaadin 7